WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164043
WebAudio does not resume when moving from background to foreground tab.
https://bugs.webkit.org/show_bug.cgi?id=164043
Summary
WebAudio does not resume when moving from background to foreground tab.
Jer Noble
Reported
2016-10-26 16:00:58 PDT
WebAudio does not resume when moving from background to foreground tab.
Attachments
Patch
(4.02 KB, patch)
2016-10-26 16:04 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2016-10-26 16:01:54 PDT
rdar://problem/28233151
Jer Noble
Comment 2
2016-10-26 16:04:51 PDT
Created
attachment 292970
[details]
Patch
WebKit Commit Bot
Comment 3
2016-10-28 18:21:38 PDT
Comment on
attachment 292970
[details]
Patch Clearing flags on attachment: 292970 Committed
r208092
: <
http://trac.webkit.org/changeset/208092
>
WebKit Commit Bot
Comment 4
2016-10-28 18:21:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug