WebAudio does not resume when moving from background to foreground tab. https://bugs.webkit.org/show_bug.cgi?id=164043

Reviewed by Darin Adler.

Source/WebCore:

Test: webaudio/page-canstartmedia.html

* Modules/webaudio/AudioContext.cpp:
(WebCore::AudioContext::mediaCanStart):

LayoutTests:

* webaudio/page-canstartmedia-expected.txt: Added.
* webaudio/page-canstartmedia.html: Added.


Canonical link: https://commits.webkit.org/181874@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208092 268f45cc-cd09-0410-ab3c-d52691b4dbfc